--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+html{
+    text-size-adjust: 100%;
+}
 *{
     font-family: 'Poppins', sans-serif;
 }
